[metadata]
name = py_pdf_reader
version = 0.0.1
author = muhammed aslam c
author_email = asdmail045@gmail.com
description = text to speech converter
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/aslam-c/text-to-speech
project_urls =
    Bug Tracker = https://github.com/aslam-c/text-to-speech/issues
    repository = https://github.com/aslam-c/text-to-speech
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src